Removed SD from trips, added SA to future trip

--- a/adventures/comingsoon.html
+++ b/adventures/comingsoon.html
@@ -83,7 +83,7 @@
             <div class="header-content-inner">
                 <h2 id="homeHeading">Sorry, I haven't gone on this trip yet :(</h2>
                 <hr>
-                <p>This page is just a placeholder for trips that I haven't gone on yet. Check back a little after the scheduled date to see how the adventure went!</p>
+                <p>This page is a placeholder for trips that I haven't gone on yet. Check back a little after the scheduled date to see how the adventure went!</p>
                 <a href="index.html#adventures" class="btn btn-primary btn-xl page-scroll">Back to all adventures</a>
             </div>
         </div>
