--- a/adventures/index.html
+++ b/adventures/index.html
@@ -106,6 +106,23 @@
     <section class="no-padding">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
+
+                <div class="col-lg-6 col-sm-6 domestic">
+                    <a href="comingsoon.html" class="portfolio-box">
+                        <img src="img/sanantonio/sanantonio_front.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    SAN ANTONIO, TEXAS
+                                </div>
+                                <div class="project-category text-faded">
+                                    MARCH 2017
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
                 <div class="col-lg-6 col-sm-6 domestic">
                     <a href="trips/snowvalley.html" class="portfolio-box">
                         <img src="img/snowvalley/snowvalley_front.jpg" class="img-responsive" alt="">
@@ -153,9 +170,8 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-6 col-sm-6 domestic">
-                    <!-- <a href="trips/sandiego.html" class="portfolio-box"> -->
-                    <a href="incomplete.html" class="portfolio-box">
+<!--                 <div class="col-lg-6 col-sm-6 domestic">
+                    <a href="trips/sandiego.html" class="portfolio-box">
                         <img src="img/sandiego/sandiego_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -168,7 +184,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
                 <!-- 
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
