Added Google map of locations to Magiq, other changes

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -83,7 +83,7 @@
                     <hr class="light">
                     <p class="text-faded">My name is Brian. I was born and raised in the Bay Area, graduated from the University of California, San Diego in 2016 with a B.S. in Computer Science, and now I am currently working as a software engineer in Los Angeles. I am a huge sports fan (<span style="color:yellow">Go Lakers!</span>), I love food, and I watch <u>a lot</u> of TV shows.<br><br>
 
-                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer. This page has all the information about my travels: big or small, domestic or international, day trips or week-long adventures. Check out where I've been and join me on this adventure!</p>
+                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer. I wanted to create a website so people could see where I've been and live through my experiences. This page has all the information about my travels: big or small, domestic or international, day trips or week-long adventures. Check out where I've been and join me on this adventure!</p>
                     <a href="#adventures" class="page-scroll btn btn-default btn-xl sr-button">My Adventures</a>
                 </div>
             </div>
@@ -220,20 +220,22 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Follow me!</h2>
                     <hr class="primary">
-                    <p>Want to get in contact? Want to know what I've been up to? Want to connect? Follow me on social media or send me an email!</p>
+                    <p>Want to get in contact? Want to know what I've been up to? Want to connect? Want to see the source code for this page? Follow me on social media or send me an email!</p>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 text-center">
                     <a href="https://www.instagram.com/briannnnfong/" target="_blank"><i class="fa fa-instagram fa-5x sr-contact"></i>
                     <p>Instagram</p></a>
                 </div>
                 <div class="col-md-3 text-center">
+                    <a href="https://www.brianfong.yelp.com" target="_blank"><i class="fa fa-yelp fa-5x sr-contact"></i>
+                    <p>Yelp</p></a>
+                </div>
+                <div class="col-md-3 text-center">
                     <a href="https://www.linkedin.com/in/brianjfong" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>
                     <p>LinkedIn</p></a>
                 </div>
-                <div class="col-md-3 text-center">
-                    <a href="https://www.brianfong.yelp.com" target="_blank"><i class="fa fa-yelp fa-5x sr-contact"></i>
-                    <p>Yelp</p></a>
-                </div>     
                 <div class="col-md-3 text-center">
                     <a href="mailto:brianfong24@gmail.com"><i class="fa fa-envelope-o fa-5x sr-contact"></i>
                     <p>Email</p></a>
