--- a/adventures/trips/magiq.html
+++ b/adventures/trips/magiq.html
@@ -95,7 +95,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">How It All Began</h2>
                     <hr class="light">
-                    <p class="text-faded">My boss Joel bought the tickets on Groupon. The place is called <a style="color:black;" href="https://magiqescaperoom.com/los-angeles" target="_blank">MagIQ Escape Room</a> in LA. He thought it would be a good team building exercise and invited some coworkers to try it. He had done escape rooms before, trying three and completing one. I, on the other hand, had never done one before but I've always wanted to try. He settled on a date (December 20, 2016) and time (7pm) and difficuly (intermediate) and we were off! </p>
+                    <p class="text-faded">My boss Joel bought the tickets on Groupon. The place is called <a style="color:black;" href="https://magiqescaperoom.com/los-angeles" target="_blank">MagIQ Escape Room</a> in LA. He thought it would be a good team building exercise and invited some coworkers to try it. He had done escape rooms before, trying three and completing one. I, on the other hand, had never done one before but I've always wanted to try. He settled on a date (December 20, 2016) and time (7pm) and difficuly (intermediate) and we were off!</p>
                 </div>
             </div>
         </div>
@@ -117,7 +117,9 @@
 
                     In the third part, we were on a beach setting, and there was so much going on, but we were getting the hang of it. Behind the door, there was a linear equations type picture with fruits. We calculated what each fruit's number was and tried it in a 3-digit lock but it didn't work. Kyle and Guillermo worked on getting a key out of a maze via magnet. I looked back at the equations and saw that bananas was 40 but in the last equation, there were only three bananas and not four. Four bananas was 40 so three bananas was 30. The total was 140 instead of 150. I tried it on the lock but it didn't work. Then Joel opened a lock in the previous room that was inside the desk using 140. Inside were pieces of a puzzle that we put together. On the completed puzzle was a treasure map, but after a while, Joel saw the giant numbers on top of the puzzle: "1640". We used that to open another lock, opening a pattern of sorts and skeleton bones. This was what the pictures and arrows were used for. We followed the arrows for each pictures, resulting in a number. We used these numbers to open the second of two locks and went into another room.<br><br>
 
-                    In this final part, we saw a skeleton, a knob in a puzzle against the wall, and a glass case. Kyle saw the key in the back left corner and used some wire to get it out. Guillermo got the knob out of the wall, and we used both to open a treasure case that had a bunch of keys. Joel realized that none of the keys worked on the door (they were too big) but a little later, he saw that there was another normal key attached as well. He used that key to open the door, and it opened! We were out!</p>
+                    In this final part, we saw a skeleton, a knob in a puzzle against the wall, and a glass case. Kyle saw the key in the back left corner and used some wire to get it out. Guillermo got the knob out of the wall, and we used both to open a treasure case that had a bunch of keys. Joel realized that none of the keys worked on the door (they were too big) but a little later, he saw that there was another normal key attached as well. He used that key to open the door, and it opened! We were out!</p><br>
+
+                    <div id="map"></div>
                 </div>
             </div>
         </div>
@@ -156,11 +158,6 @@
                           <img src="../img/magiq/slideshow/3.jpg" class="resize">
                             <figcaption>The Komodo Phorrito. Bad lighting but delicious! Also, their tater tots are AMAZING.</figcaption>
                         </figure>
-
-<!--                         <figure class="item text-faded">
-                          <img src="../img/header.jpg">
-                            <figcaption>Beautiful flowers in Kolymbari, Crete.</figcaption>
-                        </figure> -->
                       </div>
 
                       <!-- Left and right controls -->
@@ -281,6 +278,12 @@
 
     <script src="../js/mustache.js"></script>
     <!-- <script src="../main.js"></script> -->
+
+    <!-- To show Google Map -->
+    <script src="../js/script.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbVKPP09GmeeYpjlWw0vh6F03dES9omYI&callback=initmapMagiq">
+    </script>
+
 </body>
 
 </html>
