Changes to front page description

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -83,7 +83,12 @@
                     <hr class="light">
                     <p class="text-faded">My name is Brian. I was born and raised in the Bay Area, graduated from the University of California, San Diego in 2016 with a B.S. in Computer Science, and now I am currently working as a software engineer in Los Angeles. I am a huge sports fan (<span style="color:yellow">Go Lakers!</span>), I love food, and I watch <u>a lot</u> of TV shows.<br><br>
 
-                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer. I wanted to create a website so people could see where I've been and live through my experiences. This page has all the information about my travels: big or small, domestic or international, day trips or week-long adventures. Check out where I've been and join me on this adventure!</p>
+                    I haven't gotten the chance to travel in my life so far. I didn't go on summer trips or any study abroad programs, so I don't have many memories and adventures overseas or even in other parts of the USA. Now that I am making (enough) money, I'm taking advantage of this great time in my life to see what the world has to offer.
+
+                    As I go on this journey, I'm learning more about how I want this website to look like. That's why you might see that on my first couple trips, things might not be as detailed or organized. I'm making changes on the go and I'm really winging it. I'm adding more to the page as I see fit and I want to add more and more features to this page as possible. If you have any suggestions, please let me know!
+
+                    I wanted to create a website so people could see where I've been and live through my experiences. This page has all the information about my travels: big or small, domestic or international, day trips or week-long adventures. Check out where I've been and join me on this adventure!
+                    </p>
                     <a href="#adventures" class="page-scroll btn btn-default btn-xl sr-button">My Adventures</a>
                 </div>
             </div>
