Added maps for snow valley, added OC+SD page

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -112,7 +112,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
 
-                <div class="col-lg-6 col-sm-6 domestic">
+                <div class="col-lg-12 col-sm-6 domestic">
                     <a href="comingsoon.html" class="portfolio-box">
                         <img src="img/sanantonio/sanantonio_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -134,7 +134,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    SNOW VALLEY MOUNTAIN RESORT, CALIFORNIA
+                                    SNOW VALLEY, CALIFORNIA
                                 </div>
                                 <div class="project-category text-faded">
                                     JANUARY 2017
@@ -154,6 +154,22 @@
                                 </div>
                                 <div class="project-category text-faded">
                                     DECEMBER 2016
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-6 col-sm-6 domestic">
+                    <a href="trips/ocsd.html" class="portfolio-box">
+                        <img src="img/ocsd/ocsd_front.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    ORANGE COUNTY+SAN DIEGO, CALIFORNIA
+                                </div>
+                                <div class="project-category text-faded">
+                                    DECEMBER 2016 - JANUARY 2017
                                 </div>
                             </div>
                         </div>
@@ -185,22 +201,6 @@
                                 </div>
                                 <div class="project-category text-faded">
                                     JUNE 2014 - SEPTEMBER 2014
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div> -->
-                <!-- 
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
                                 </div>
                             </div>
                         </div>
