--- a/adventures/trips/snowvalley.html
+++ b/adventures/trips/snowvalley.html
@@ -81,7 +81,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Snow Valley Mountain Resort, California</h1>
+                <h1 id="homeHeading">Snow Valley, California</h1>
                 <hr>
                 <p></p>
                 <a href="#begin" class="btn btn-primary btn-xl page-scroll">Let's begin</a>
@@ -125,7 +125,9 @@
 
                     On our second day snowboarding, I picked up right where I left off and I even learned how to get off the lift better without falling. Brian told me that he was really surprised how quickly I was picking it up. He said that where I was on my first time snowboarding was where he was on his second or third time snowboarding. The resort closed at 4pm on Sunday so we left around that time. It took forever to get out of the parking lot and to the rental place to return our equipment. We decided to go to KBBQ for dinner and we decided on Red Castle 3 in Rowland Heights.<br><br>
 
-                    We met Angie and Ryan (more of their friends) at Red Castle and we ate. I cooked (as usual) and I found out that Ryan knew Rebecca (a girl I went to high school with) as well. We started going on and on about stories about her and I don't think I've laughed that much in a while (I'm mean, I know). It was such a great time. We had Half and Half afterwards while everyone gave each other their belated Christmas presents. Then we said our goodbyes and I drove to LA while they drove back to the OC.</p>
+                    We met Angie and Ryan (more of their friends) at Red Castle and we ate. I cooked (as usual) and I found out that Ryan knew Rebecca (a girl I went to high school with) as well. We started going on and on about stories about her and I don't think I've laughed that much in a while (I'm mean, I know). It was such a great time. We had Half and Half afterwards while everyone gave each other their belated Christmas presents. Then we said our goodbyes and I drove to LA while they drove back to the OC.</p><br>
+
+                    <div id="map"></div>
                 </div>
             </div>
         </div>
@@ -304,6 +306,12 @@
 
     <script src="../js/mustache.js"></script>
     <!-- <script src="../main.js"></script>     -->
+
+    <!-- To show Google Map -->
+    <script src="../js/script.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbVKPP09GmeeYpjlWw0vh6F03dES9omYI&callback=initmapSnowValley">
+    </script>
+
 </body>
 
 </html>
