Changed background pic

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- sets a different background picture on each page -->
     <style type="text/css">
-        header {background-image:url(adventures/img/header.jpg);}
+        header {background-image:url(img/background.jpg);}
     </style>
 
     <!-- Bootstrap Core CSS -->
@@ -42,8 +42,7 @@
         <section class="no-padding">
             <div class="container-fluid">
                 <div class="row no-gutter popup-gallery">
-
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 opaque100">
                         <a href="adventures/index.html" class="portfolio-box">
                             <img src="adventures/img/sanantonio/sanantonio_front.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
@@ -59,7 +58,7 @@
                         </a>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 opaque100">
                         <a href="foodrecommendations/index.html" class="portfolio-box">
                             <img src="adventures/img/snowvalley/snowvalley_front.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
