finally finished ocsd page

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <aside  id="adventures">
+    <aside id="adventures">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -163,7 +163,7 @@
 
                 <div class="col-lg-6 col-sm-6 domestic">
                     <!-- <a href="trips/ocsd.html" class="portfolio-box"> -->
-                    <a href="incomplete.html" class="portfolio-box">
+                    <a href="trips/ocsd.html" class="portfolio-box">
                         <img src="img/ocsd/ocsd_front.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -193,33 +193,9 @@
                         </div>
                     </a>
                 </div>
-<!--                 <div class="col-lg-6 col-sm-6 domestic">
-                    <a href="trips/sandiego.html" class="portfolio-box">
-                        <img src="img/sandiego/sandiego_front.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    SAN DIEGO, CALIFORNIA
-                                </div>
-                                <div class="project-category text-faded">
-                                    JUNE 2014 - SEPTEMBER 2014
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div> -->
             </div>
         </div>
     </section>
-
-<!--     <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
-            </div>
-        </div>
-    </aside> -->
 
     <section id="contact">
         <div class="container">
@@ -227,7 +203,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Follow me!</h2>
                     <hr class="primary">
-                    <p>Want to get in contact? Want to know what I've been up to? Want to connect? Want to see the source code for this page? Follow me on social media or send me an email!</p>
+                    <p>Want to connect or get in contact? Want to see what I've been up to? Follow me on social media and check out what other projects I've been working on!</p>
                 </div>
             </div>
             <div class="row">
@@ -236,7 +212,7 @@
                     <p>Instagram</p></a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <a href="https://www.brianfong.yelp.com" target="_blank"><i class="fa fa-yelp fa-5x sr-contact"></i>
+                    <a href="https://www.yelp.com/user_details?userid=_jqTa-3-fqmBxnkANJHtFw" target="_blank"><i class="fa fa-yelp fa-5x sr-contact"></i>
                     <p>Yelp</p></a>
                 </div>
                 <div class="col-md-3 text-center">
@@ -244,8 +220,8 @@
                     <p>LinkedIn</p></a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <a href="mailto:brianfong24@gmail.com"><i class="fa fa-envelope-o fa-5x sr-contact"></i>
-                    <p>Email</p></a>
+                    <a href="https://honandbun.github.io/" target="_blank"><i class="fa fa-cutlery fa-5x sr-contact"></i>
+                    <p>Hon + Bun</p></a>
                 </div>
             </div>
         </div>
