--- a/adventures/trips/ocsd.html
+++ b/adventures/trips/ocsd.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OC/SD - Brian's Adventures</title>
+    <title>OC+SD - Brian's Adventures</title>
 
     <!-- sets a different background picture on each page -->
     <style type="text/css">
@@ -95,7 +95,8 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">How It All Began</h2>
                     <hr class="light">
-                    <p class="text-faded"></p>
+                    <p class="text-faded">Brian Mendoza (my college roommate) wanted to have a get together with some of his and Shannon's (his girlfriend) friends. We hadn't seen each other since we graduated so it's been about half a year since we last saw each other. We still had each other's souvenir presents and also Christmas presents to give each other other so it was a good time to give them. The party was going to be at Shannon's place and a bunch of us would stay over.<br><br>
+                    </p>
                 </div>
             </div>
         </div>
@@ -107,9 +108,20 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">The Trip</h2>
                     <hr class="light">
-                    <p class="text-faded"></p><br>
+                    <p class="text-faded">I got to Shannon's place at around 5pm but the only people there were Brian, Shannon, and Brittney. They were preparing food and didn't need any help so I was just chilling. Brian and I exchanged our gifts that I got for him from Japan and that he got for me from Europe. I got him a Tokyo Tower keychain and some green tea kit kat (he loves snacks). He got me a poster from Europe.<br><br>
+                    The other thing he got me needs its own section. He is getting married in October 2017 and he asked me to be one of his groomsmen! He got a pair of socks that had some liquor in it. On the top it asked if I would stand by him. It was such an honor and I'm so glad that I'll be able to share that moment with him. We've been roommates every year in college and we've seen each other grow so much throughout the years. I couldn't be happier for him and Shannon<br><br>
+                    People started coming at around 6:30-7pm. We were playing a game called <u><a href="https://www.amazon.com/Murder-Mystery-Party-Games-Passion/dp/B00000J00L" target="_blank">Pasta, Passion, and Pistols</a></u> and we had to wear a certain costume for our character. Originally I was an unnamed character but I eventually got a role. I underdressed for my outfit but it wasn't a big deal. I also brought a fifth of Jameson so I was getting ready to bring the party!<br><br>
+                    After we finished playing the game, it was time to crank up the music. We were drinking everything from tequila to beer to champagne. They had the big 2-0-1-7 balloons in the living room so people was taking pictures with it while others just started taking shots. Eventually we decided to take a group picture with all of us.<br><br>
+                    I drank a lot in the first hour or so. I didn't realize it but I was going shot-for-shot with Morgan (one of Costas' friends) and he's at least six feet tall and drinks the most out of everyone there. I guess I was just in the mood and didn't realize how much I was drinking. We played some more games night Midnight Werewolf and by 10:30pm I just passed out on the couch. People tried waking me up so I could be awake for midnight but I wasn't having any of it.<br><br>
+                    The next morning, I woke up on the couch with no idea what happened or how I got there. My contacts were still in so my eyes were hurting. Apparently there were four extra beds and they tried to get me to one of them but I was perfectly fine where I was so they just left me there. I missed so much of what happened the night before but I still had a great time. And to be honest, I don't even remember much of that.<br><br>
+                    Some people went home when they woke up. When the rest of us who were here woke up, we went to Nectar for acai bowls for the first meal of 2017 (starting it off healthy!). I had glitter on my face because of the hats but I couldn't get them off so I just left them there. I didn't shower either since I didn't bring any extra clothes so I just had to tough it out.<br><br>
+                    After we ate, we were talking and Emily, Morgan, and Costas brought up that they were going to San Diego to party at Gaslamp. If you didn't know, San Diego is probably my favorite city in the entire world and I will live there someday. I didn't have any extra clothes but I decided to go last minute with them. We went to Lucha Libre for burritos (Morgan's favorite). I got the Surfin California burrito which was amazing.<br><br>
+                    This was going to be my fourth night drinking in a row and I was still hungover so I was just going to take it slow that night. I didn't have a dress shirt but Costas let me borrow one of his. It was a little big but it's fine. We played Jenga and the loser would have to take a shot. Costas lost once and it just went downhill from there because he kept losing and taking more shots.<br><br>
+                    I went to UCSD for four years but had never been to Gaslamp (sad, I know) so it was exciting to be able to go. We got an Uber and bar/club hopped at a couple different places. We went to the Tipsy Crow and Whiskey Girl, among other places. We danced the night away and had a grand ole time. The best part was afterwards, we took an Uber to Vallartas. And guess what I got? Christian fries and everything the black box of heaven comes with. Morgan had never had it before so I recommended that he get it. It was so good, I can never fully explain just how good it is.<br><br>
+                    The day after, Morgan, Costas and I had to drive back to the OC to drop me off and they would be going back to Bakersfield.</p><br>
 
                     <div id="map"></div>
+
                 </div>
             </div>
         </div>
@@ -131,23 +143,35 @@
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
-                        <!-- <li data-target="#myCarousel" data-slide-to="3"></li> -->
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                        <li data-target="#myCarousel" data-slide-to="4"></li>
                         </ol>
                       
                         <figure class="item active text-faded">
-                          <img src="../img/magiq/slideshow/1.jpg" class="resize">
-                            <figcaption>A picture of the group after we completed the room.</figcaption>
+                          <img src="../img/ocsd/slideshow/1.jpg">
+                            <figcaption>Group picture with all of us.</figcaption>
                         </figure>
 
                         <figure class="item text-faded">
-                          <img src="../img/magiq/slideshow/2.jpg" class="rotate90">
-                            <figcaption>Picture of the cannon and arrows. The only picture I took in the room.</figcaption>
+                          <img src="../img/ocsd/slideshow/2.jpg">
+                            <figcaption>A picture of some groomsmen and bridesmaid looking disgusted at the to-be bride and groom.</figcaption>
                         </figure>
 
                         <figure class="item text-faded">
-                          <img src="../img/magiq/slideshow/3.jpg" class="resize">
-                            <figcaption>The Komodo Phorrito. Bad lighting but delicious! Also, their tater tots are AMAZING.</figcaption>
+                          <img src="../img/ocsd/slideshow/3.jpg">
+                            <figcaption>Morgan, Costas, Emily, and myself.</figcaption>
                         </figure>
+
+                        <figure class="item text-faded">
+                          <img src="../img/ocsd/slideshow/4.jpg">
+                            <figcaption>Groomsmen with the to-be groom.</figcaption>
+                        </figure>
+
+                        <figure class="item text-faded">
+                          <img src="../img/ocsd/slideshow/5.jpg">
+                            <figcaption>How Brian asked. Costas was supposed to get his own as well but they messed up his order.</figcaption>
+                        </figure>
+
                       </div>
 
                       <!-- Left and right controls -->
@@ -175,9 +199,10 @@
                     <p>
                         <ul class="text-faded">
                             <li><p>Shannon told us that on New Year's Day morning, her brother likes to walk around screaming, "I haven't showered all year!" and touches everything "for the first time this year."</p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
+                            <li><p>Automatic trash can lid opener. You just wave your hand and it opens! It was so fun to play with.</p></li>
+                            <li><p>I was the murderer of the game that we played. Afterwards, one of Morgan's friend snapchatted him saying that if we played a murder mystery game, I would be the murderer. We will never know how she was right in guessing that.</p></li>
+                            <li><p>Brian asked me to be one of his groomsmen! What an honor. To have been with this guy since we were freshmen in college and now he's getting married. It's been an amazing journey and I couldn't be more excited for one of the best guys I know. I even helped him go ring shopping!</p></li>
+                            <li><p>We went to Vallartas after Gaslamp and Morgan tried Christian fries for the first time and he was blown away by it. But honestly, who isn't blown away by it?</p></li>
                         </ul>
                     </p>
                 </div>
@@ -193,10 +218,9 @@
                     <hr class="light">
                     <p>
                         <ul class="text-faded">
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
+                            <li><p>The neighborhood Shannon lived in. I would like to live in the OC someday and her area seems to be perfect for the type of place I'd want to live in or around.</p></li>
+                            <li><p>San Diego. Whenever I have a chance to go to San Diego and get Vallartas, I take it. Vallartas is LIFE.</p></li>
+                            <li><p>I just felt young and spontaneous going to San Diego on a whim. I had no obligations and I wasn't skipping work or anything so I just decided to go and I'm so glad I did.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -214,8 +238,9 @@
                         <ul class="text-faded">
                             <li><p>I only brought one shirt (the one I wore) thinking I would only be there for one night. Turns out I got drool on my shirt and couldn't wash it off, so I had to wear that shirt the entire trip until I got home. Good thing I had a jacket to cover the drool up.</p></li>
                             <li><p>To be honest, I don't know if it was drool or not. I don't know what else it could be so I'm gonna assume it was drool.</p></li>
-                            <li><p>I didn't shower </p></li>
-                            <li><p></p></li>
+                            <li><p>I didn't shower until after I came back home from San Diego which was a good three days. I felt gross.</p></li>
+                            <li><p>I passed out before midnight and wasn't awake for the turn of the new year. They tried waking me up but I wasn't having it.</p></li>
+                            <li><p>Drinks at Gaslamp were expensive! It was $9 for a whiskey and coke and $13 for an AMF. My wallet was feeling sad that night.</p></li>
                         </ul>
                     </p>
                 </div>
@@ -232,9 +257,8 @@
                     <p>
                         <ul class="text-faded">
                             <li><p>Make sure to call bars/clubs on New Year's Eve and New Year's in case they are closed for the holidays.</p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
-                            <li><p></p></li>
+                            <li><p>Pace yourself so you are awake for the turn of the new year.</p></li>
+                            <li><p>Bring extra clothes if you have the space for it. You'll never know what will happen.</p></li>
                         </ul>
                     </p>
                 </div>
